--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.4'
+
 services:
  catalogdb:
   image: postgres
@@ -7,6 +9,9 @@ services:
  
  distributedcache:
   image: redis
+
+ orderdb:
+  image: mcr.microsoft.com/mssql/server
   
  catalog.api:
   image: ${DOCKER_REGISTRY-}catalogapi
