--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -53,6 +53,17 @@ services:
       - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
 
+ messagebroker:
+  container_name: messagebroker
+  hostname: ecommerce-mq
+  environment:     
+   RABBITMQ_DEFAULT_USER: guest
+   RABBITMQ_DEFAULT_PASS: guest
+  restart: always
+  ports:
+    - "15672:15672"
+    - "5672:5672"
+
  basket.api:
   environment:
     - ASPNETCORE_ENVIRONMENT=Development
@@ -61,10 +72,14 @@ services:
     - ConnectionStrings__Database=Server=basketdb;Port=5432;Database=BasketDB;User Id=postgres;Password=postgres;Pooling=true;
     - ConnectionStrings__Redis=distributedcache:6379
     - GrpcSettings__DiscountUrl=https://discount.grpc:8081
+    - MessageBroker__Host=amqp://ecommerce-mq:5672
+    - MessageBroker__UserName=guest
+    - MessageBroker__Password=guest
   depends_on:
     - basketdb
     - distributedcache
     - discount.grpc
+    - messagebroker
   ports:
     - "6001:8080"
     - "6061:8081"
@@ -84,3 +99,23 @@ services:
    volumes:
      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+
+ ordering.api:
+   environment:
+    - ASPNETCORE_ENVIRONMENT=Development
+    - ASPNETCORE_HTTP_PORTS=8080
+    - ASPNETCORE_HTTPS_PORTS=8081
+    - ConnectionStrings__Database=Server=orderdb;Database=OrderDb;User Id=sa;Password=SwN12345678;Encrypt=False;TrustServerCertificate=True
+    - MessageBroker__Host=amqp://ecommerce-mq:5672
+    - MessageBroker__UserName=guest
+    - MessageBroker__Password=guest
+    - FeatureManagement__OrderFullfilment=false
+   depends_on:
+    - orderdb
+    - messagebroker
+   ports:
+    - "6003:8080"
+    - "6063:8081"
+   volumes:
+   - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+   - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
